se modifica la imagen de curriculum, se modifica el tamaño de las letras para los (fieldset, ul, header)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-.contenedor{
-    max-width: 90%;
-    margin: 0 auto;
+#nombre{
+    border: solid 1px;
+    padding: 8px;
 }
+legend{
+    border: solid 2px;
+    border-radius: 1px;
+    background-color: rgb(63, 58, 222);
+}
+
