--- a/styles.css
+++ b/styles.css
@@ -2,27 +2,28 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #153448;
+    background-color: #000022;
 }
 
 header {
     text-align: center;
     margin-bottom: 20px;
-    color: #948979;
+    color: #000000;
 }
 
 main {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #3C5B6F;
-    color: #010101;
+    background-color: #718A91;
+    color: #000000;
 }
 
 #personal-info header {
-    font-size: 24px;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
 }
-
 
 #personal-info img {
     width: 150px;
@@ -30,7 +31,7 @@ main {
     object-fit: cover;
     display: block;
     margin: 0 auto 20px;
-    border: 5px solid #DFD0B8; 
+    border: 8px solid #5E6572; 
 }
 
 #personal-info h2 {
@@ -42,12 +43,12 @@ section {
     background-color: #ffffff;
     padding: 15px;
     border-radius: 15px;
-    border: 10px solid #DFD0B8;
+    border: 10px solid #7D98A1;
 }
 
 section h3 {
     margin-bottom: 10px;
-    color: #948979;
+    color: #5E6572;
 }
 
 footer {
@@ -71,14 +72,47 @@ img {
 }
 
 #hobbies-info img {
-    width: 250px;
+    width: 280px;
     height: auto;
     display: block;
     margin: 0 auto 20px; 
-    border: 5px solid #DFD0B8;
+    border: 8px solid #5F7479;
     transition: transform 0.3s ease; 
 }
 
 #hobbies-info img:hover {
     transform: translateY(-10px);
 }
+.custom-btn {
+    background-color: #5E6572 !important; 
+    color: #ffffff !important; 
+    padding: 10px 20px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    margin-top: 10px; 
+    border-radius: 8px; 
+}
+a.custom-btn.btn-primary {
+    background-color: #5E6572 !important; 
+    border-color: #5E6572!important; 
+    color: #ffffff !important; 
+}
+
+.bg-color {
+    background-color: #B8C1CD !important;
+    border-color: #B8C1CD!important; 
+}
+.btn-primary {
+    background-color: #5E6572 !important;
+    border-color: #5E6572 !important; 
+    color: #ffffff !important;
+}
+
+.btn-primary:hover {
+    background-color: #5E6572 !important;
+    border-color: #5E6572 !important;
+    color: #ffffff !important; 
+}
+
