--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,14 @@ body {
 header {
     text-align: center;
     margin-bottom: 20px;
-    color: #718A91;
+    color: #000000;
+}
+
+#cv-title {
+    background-color: #718A91;
+    color: #000000;
+    padding: 15px;
+    border-radius: 50px;
 }
 
 main {
@@ -72,7 +79,7 @@ img {
 }
 
 #hobbies-info img {
-    width: 280px;
+    width: 260px;
     height: auto;
     display: block;
     margin: 0 auto 20px; 
