--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #153448;
+    background-color: #153448; /* Color de fondo predeterminado */
 }
 
 header {
